--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-yo wassup Earth
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Mark Allen Matney, Jr.</title>
+    <meta name="author" content="Mark Allen Matney, Jr.">
+    <meta name="description" content="Personal website for Mark Matney">
+    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="stylesheet" href="css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="fonts/font-awesome-4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/css.css" type="text/css">
+  </head>
+  <body>
+    <div id="heading">
+      <h1>WHERE IS MARK????</h1>
+    </div>
+<!--
+    <a href=""><i class="fa fa-github fa-5x" aria-hidden="true"></i></a>
+    <a href=""><i class="fa fa-soundcloud fa-5x" aria-hidden="true"></i></a>
+    <a href=""><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
+-->
+    <script src="js/jquery-1.12.3.min.js" type="text/javascript"></script>
+    <script src="js/jquery.lettering-0.6.1.min.js" type="text/javascript"></script>
+    <script src="js/js.js"></script>
+  </body>
+</html>
